Animación de pulsación

--- a/404-page.html
+++ b/404-page.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <section class="container">
-        <h1 class="container__h1">404</h1>
+        <h1 class="container__h1 pulse">404</h1>
         <p class="container__p">Página no encontrada</p>
     </section>
     <footer class="footer">
