Repair animation effect

--- a/404-page.html
+++ b/404-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,14 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Página no encontrada</title>
 </head>
+
 <body>
     <header class="header">
         <img class="header__img" src="./images/logo-platzi-video-BW2.png" alt="">
-        <div class="header__menu">
-            <div class="header__menu--profile">
-                <img src="./images/profile.png" alt="User Image">
-                <p>Perfil</p>
-            </div>
-            <ul>
-                <li><a href="/">Cuenta</a></li>
-                <li><a href="/">Cerrar sesión</a></li>
-            </ul>
-        </div>
     </header>
     <section class="container">
         <h1 class="container__h1 pulse">404</h1>
-        <p class="container__p">Página no encontrada</p>
+        <p>Página no encontrada</p>
     </section>
     <footer class="footer">
         <ul class="footer__ul">
@@ -33,4 +25,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
